feat(account): 账号设置与部署 - 支持显示名称修改和1Panel最新版
